crates/cli/tests/snapshots/lib__check@cant_return_from_global.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/cant_return_from_global.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/cant_return_from_global.nemo
---
success: false
exit_code: 1
----- stdout -----
[24] Error: Can't 'return' from a global definition.
   ╭─[ tests/check/cant_return_from_global.nemo:1:12 ]
   │
 1 │ global g = return 1
   │            ────┬───  
   │                ╰───── Can't 'return' from a global definition.
───╯

[24] Error: Can't 'return' from a global definition.
   ╭─[ tests/check/cant_return_from_global.nemo:4:3 ]
   │
 4 │   return x
   │   ────┬───  
   │       ╰───── Can't 'return' from a global definition.
───╯


----- stderr -----
Error: "Check failed with 2 errors"
